# openscad-components

./: .gitignore  README.md  pyproject.toml
src/kc3zvd/openscad_components/: __init__.py  antenna.py  base.py
tests/: test_coax_trap.py
